# lowlevel-datamng-lab1

./: Ex1.txt  LAB_COMPUTER_README.md  README  README.md
ex2/: Dockerfile
ex3/: CMakeLists.txt  test.c
ex3/fork/: fork.c
ex3/pipes/: named_readfirst.c  named_writefirst.c  processes.c  simple.c
ex3/shared_memory/: a.out  consumer.c  producer.c
